# ap-server

./: .env.prod  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README_PDM.md  asbp_archive.sql  cli.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  settings.py
application/access/: access.py  access_registry.py  base_access.py
application/service/: asbp_archive.py  base_service.py  black_list.py  claim.py  parking.py  scope_constructor.py  service_registry.py  system_settings.py  visitor.py  web_push.py
applied_files/config/: config.json
applied_files/migrations/asbp/: 0_20220914141520_init.sql
applied_files/reports/sample_report/: sample_report.py
applied_files/static/: sample_excel.txt
asbp_app/: config.py  container.py  routes_dict.py  settings.py
asbp_app/api/: protectors.py
asbp_app/api/dto/: access.py  response.py  service.py
asbp_app/api/views/: access.py  auth.py  claim.py  views_pass.py  visitor.py  web_push.py
asbp_app/enviroment/celery/: celery_.py  sending_emails.py  tasks.py  watcher.py
asbp_app/enviroment/event/: event.py
asbp_app/enviroment/infrastructure/database/: access_loaders.py  init_db.py  models.py
asbp_app/enviroment/infrastructure/database/utils/: filter_uniq.py
asbp_app/enviroment/resources/: database.py
asbp_app/enviroment/service/: archive.py  auth.py  claim.py  parking.py  pass_service.py  visitor.py  web_push.py
asbp_app/utils/: filter_uniq.py  license_count.py  mailing.py  mysignals.py  orjson_default.py  system.py  watermark.py
ci/docker/: Dockerfile  docker-compose.yml
ci/openapi/: claim_scheme.yml  openapi.py  sanic_routes.json
config/: config.py
core/communication/: event.py  subscriber.py
core/communication/celery/: celery_.py  sending_emails.py  tasks.py  watcher.py
core/dto/: __init__.py  access.py  db.py  service.py  validator.py
core/errors/: __init__.py  base_error.py  error_handler.py
core/plugins/: plugins_wrap.py
core/server/: auth.py  controllers.py  routes.py  server.py  sse_monitoring.py
core/utils/: converters.py  crypto.py  encrypt.py  license_count.py  limit_offset.py  loggining.py  mysignals.py  orjson_default.py
core/wraps/: route_wrap.py
infrastructure/asbp_archive/: models.py
infrastructure/database/: connection.py  init_db.py  layer.py  models.py  repository.py
infrastructure/database/migrations/asbp/: 0_20220804123346_init.sql  0_20220815125906_init.sql  1_20220812163517_update.sql
static/: sample_excel.xlsx
tests/: test_api.py
